[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
flask = "^3.0.3"
tiktoken = "^0.7.0"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
beautifulsoup4 = "^4.12.3"
python-fasthtml = "^0.2.1"
fastcore = "^1.6.1"
starlette = "^0.38.2"
fastlite = "^0.0.7"
sqlite-minutils = "^3.36.0.post4"
pytest-asyncio = "^0.23.8"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"